Added How-To, Highscores and PlayGame functionality

--- a/math_app_for_kids/app/src/main/AndroidManifest.xml
+++ b/math_app_for_kids/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".PlayGame">
+        </activity>
+        <activity android:name=".HowToPlay">
+        </activity>
+        <activity android:name=".HighScores">
+        </activity>
     </application>
 
 </manifest>
